<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/self_diagnose_icon"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/e_pass_icon"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_faq"
            android:icon="@drawable/faqs_icon"
            android:title="@string/menu_faq" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/age_icon"
            android:title="@string/profile_header" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/settings_menu" />

        <item
            android:id="@+id/nav_debug"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/debug_menu" />

    </group>
</menu>
