<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryBlue">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </RadioGroup>

    <TextView
        android:id="@+id/apply_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="112dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/settings_menu"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/diagnose_icon"
        android:layout_width="68dp"
        android:layout_height="75dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="80dp"
        android:src="@drawable/e_pass_icon"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintStart_toEndOf="@+id/apply_title"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/ic_menu_manage" />

    <TextView
        android:id="@+id/loc_tracking_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="48dp"
        android:text="@string/location_tracking_title"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apply_title" />

    <Switch
        android:id="@+id/location_tracking_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="204dp"
        android:layout_marginTop="48dp"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/loc_tracking_placeholder"
        app:layout_constraintStart_toStartOf="@+id/loc_tracking_placeholder"
        app:layout_constraintTop_toBottomOf="@+id/apply_title" />

    <Switch
        android:id="@+id/contact_sync_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="204dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/contact_sync_placeholder"
        app:layout_constraintStart_toStartOf="@+id/contact_sync_placeholder"
        app:layout_constraintTop_toBottomOf="@+id/location_tracking_switch" />

    <TextView
        android:id="@+id/contact_sync_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="25dp"
        android:text="@string/contact_sync_title"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loc_tracking_placeholder" />


</androidx.constraintlayout.widget.ConstraintLayout>